--- a/cau lenh dieu kien/thuc hanh/tuantubangoibai2.html
+++ b/cau lenh dieu kien/thuc hanh/tuantubangoibai2.html
@@ -6,17 +6,14 @@
 </head>
 <body>
 <script>
-    let message;
-    message = prompt('login');
-    if (message == 'Employee') {
-        alert('hello');
-    } else if (message == 'Director') {
-        alert('Greetings')
-    } else if (message == '') {
-        alert('no login');
-    } else {
-        alert('bạn nhập sai');
-    }
+      var login = prompt()
+    message = (login == 'Employee') ?
+        alert('Hello') :
+        (login == 'Director') ?
+            alert('Greetings') :
+            (login == '') ?
+              alert('No login') :
+                ('');
 </script>
 </body>
 </html>
