--- a/module3/6_CSS_casading_style_stylesheet/baitap/dinh_dang_voi_css.html
+++ b/module3/6_CSS_casading_style_stylesheet/baitap/dinh_dang_voi_css.html
@@ -5,11 +5,12 @@
     <title>Title</title>
     <style>
         p{
-            font-family: Arial;font-size: 400%;
+            font-family: Arial;
+            font-size: 200%;
             text-align: right;
         }
         .head{
-            font-size: 150px;
+            font-size: 100px;
             text-align: center;
         }
         .text1{
