--- a/module3/7_thiet_ke_bo_cuc_web/bai_tap/giao_dien_fb.html
+++ b/module3/7_thiet_ke_bo_cuc_web/bai_tap/giao_dien_fb.html
@@ -59,15 +59,16 @@
         width: 100%;
         margin-top: 30px;
         margin-left: 10%;
+
     }
 
    .footer a {
         padding: 5px;
+       text-decoration: none;
     }
     .footer hr {
         margin-right: 60%;
     }
-
 </style>
 
 
@@ -80,9 +81,9 @@
     </div>
     <div class="right">
             <div class="login">
-                <input type="text">
+                <input placeholder="tên đăng nhập" type="text">
                 <br>
-                <input type="password">
+                <input placeholder="mật khẩu" type="password">
                 <Br>
                 <input style="background: dodgerblue;color: whitesmoke;" type="submit" value="đăng nhập">
                 <br>
@@ -120,7 +121,6 @@
     <a href="">  Portal </a>
     <a href="">     Instagram </a>
     <a href="">  Bulletin </a>
-
 </div>
 </body>
 </html>
