--- a/module3/case_study_jsp_servlet/giao_dien.html
+++ b/module3/case_study_jsp_servlet/giao_dien.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+    <link rel="icon" href="https://image.flaticon.com/icons/png/512/458/458625.png" type="image/i-icon" />
     <style>
         .menu_top {
             background: dimgrey;
@@ -38,6 +39,10 @@
             width: 100%;
         }
         .container-fluid{
+        }
+
+        .left {
+            padding-left: 10px;
         }
 
     </style>
@@ -80,7 +85,7 @@
         </nav>
     </div>
     <div class="row">
-        <div class="col-3">left</div>
+        <div class="col-3"><div class="left">left</div></div>
         <div class="col-9">right</div>
     </div>
 
