--- a/module3/06_CSS_casading_style_stylesheet/baitap/tao_trang_doc_truyen_ngan.html
+++ b/module3/06_CSS_casading_style_stylesheet/baitap/tao_trang_doc_truyen_ngan.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="doc_sach.css"/>
 <style>
     h5{
-        font-size: 60px;
-        text-indent: 40%;
+        font-size: 100px;
+        text-align: center;
     }
 </style>
 <body>
